nodejs/versioned_docs/version-1.3.0/api/class-consolemessage.mdx
---
id: class-consolemessage
title: "ConsoleMessage"
---


[ConsoleMessage] objects are dispatched by page via the ['console'](api/class-page.mdx#event-console) event.

<!-- GEN:toc -->
- [consoleMessage.args()](api/class-consolemessage.mdx#consolemessageargs)
- [consoleMessage.location()](api/class-consolemessage.mdx#consolemessagelocation)
- [consoleMessage.text()](api/class-consolemessage.mdx#consolemessagetext)
- [consoleMessage.type()](api/class-consolemessage.mdx#consolemessagetype)
<!-- GEN:stop -->

## consoleMessage.args()
- returns: <[Array]<[JSHandle]>>

## consoleMessage.location()
- returns: <[Object]>
  - `url` <[string]> Optional URL of the resource if available.
  - `lineNumber` <[number]> Optional 0-based line number in the resource if available.
  - `columnNumber` <[number]> Optional 0-based column number in the resource if available.

## consoleMessage.text()
- returns: <[string]>

## consoleMessage.type()
- returns: <[string]>

One of the following values: `'log'`, `'debug'`, `'info'`, `'error'`, `'warning'`, `'dir'`, `'dirxml'`, `'table'`, `'trace'`, `'clear'`, `'startGroup'`, `'startGroupCollapsed'`, `'endGroup'`, `'assert'`, `'profile'`, `'profileEnd'`, `'count'`, `'timeEnd'`.



[AXNode]: api/class-accessibility.mdx#accessibilitysnapshotoptions "AXNode"
[Accessibility]: api/class-accessibility.mdx#class-accessibility "Accessibility"
[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[BrowserServer]: api/class-browser.mdx#class-browserserver  "BrowserServer"
[BrowserContext]: api/class-browsercontext.mdx#class-browsercontext  "BrowserContext"
[BrowserType]: api/class-browsertype.mdx#class-browsertype "BrowserType"
[Browser]: api/class-browser.mdx  "Browser"
[Buffer]: https://nodejs.org/api/buffer.htmlapi.mdx#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[ChromiumBrowser]: api/class-chromiumbrowser.mdx#class-chromiumbrowser "ChromiumBrowser"
[ChromiumBrowserContext]: api/class-chromiumbrowsercontext.mdx#class-chromiumbrowsercontext "ChromiumBrowserContext"
[ChromiumCoverage]: api/class-chromiumcoverage.mdx#class-chromiumcoverage "ChromiumCoverage"
[CDPSession]: api/class-cdpsession.mdx#class-cdpsession  "CDPSession"
[ConsoleMessage]: api/class-consolemessage.mdx#class-consolemessage "ConsoleMessage"
[Dialog]: api/class-dialog.mdx#class-dialog "Dialog"
[Download]: api/class-download.mdx#class-download "Download"
[ElementHandle]: api/class-elementhandle.mdx#class-elementhandle "ElementHandle"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[Error]: https://nodejs.org/api/errors.htmlapi.mdx#errors_class_error "Error"
[EvaluationArgument]: api/evaluationargument.mdx#evaluationargument "Evaluation Argument"
[File]: https://developer.mozilla.org/en-US/docs/Web/API/File "File"
[FileChooser]: api/class-filechooser.mdx#class-filechooser "FileChooser"
[FirefoxBrowser]: api/class-firefoxbrowser.mdx#class-firefoxbrowser "FirefoxBrowser"
[Frame]: api/class-frame.mdx#class-frame "Frame"
[JSHandle]: api/class-jshandle.mdx#class-jshandle "JSHandle"
[Keyboard]: api/class-keyboard.mdx#class-keyboard "Keyboard"
[Logger]: api/class-logger.mdx#class-logger "Logger"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[Mouse]: api/class-mouse.mdx#class-mouse "Mouse"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Page]: api/class-page.mdx#class-page "Page"
[Playwright]: api/class-playwright.mdx "Playwright"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp
[Request]: api/class-request.mdx#class-request  "Request"
[Response]: api/class-response.mdx#class-response  "Response"
[Route]: api/class-route.mdx#class-route  "Route"
[Selectors]: api/class-selectors.mdx#class-selectors  "Selectors"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringifyapi.mdx#Description "Serializable"
[TimeoutError]: api/class-timeouterror.mdx#class-timeouterror "TimeoutError"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[URL]: https://nodejs.org/api/url.html
[USKeyboardLayout]: ../src/usKeyboardLayout.ts "USKeyboardLayout"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[WebKitBrowser]: api/class-webkitbrowser.mdx#class-webkitbrowser "WebKitBrowser"
[Worker]: api/class-worker.mdx#class-worker "Worker"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structuresapi.mdx#Boolean_type "Boolean"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structuresapi.mdx#Number_type "Number"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Readable]: https://nodejs.org/api/stream.htmlapi.mdx#stream_class_stream_readable "Readable"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structuresapi.mdx#String_type "String"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"
